[package]
name = "pomoxide"
version = "1.0.1"
authors = ["Vili Lipo <vili.lipo@helsinki.fi>"]
edition = "2018"
license= "GPL-2.0"
repository = "https://github.com/ViliLipo/pomoxide"
homepage = "https://github.com/ViliLipo/pomoxide"
description = "A CLI Pomodoro timer written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10"
termion = "1.5"
notify-rust = "4"
rodio = "0.13.0"
toml = "0.5.3"
serde = "1.0.117"
serde_derive = "1.0.96"
bytes = "0.4.12"
dirs = "2.0.2"
